2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  On READ TOC/PMA/ATIP and READ DISC INFORMATION if trying
	  small buffer and then real-sized buffer, some drives send
	  garbage, so get a big enough buffer and return only the
	  applicable data size.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Implemented SCSI READ DISC INFORMATION.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Implemented SCSI READ CAPACITY(16).

	* Enums.cs:
	  Added SCSI SERVICE ACTIONs.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Added missing documentation.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Implemented SCSI READ CAPACITY(10).

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Corrected typo.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Command.cs:
	* Linux/Command.cs:
	* Device/Commands.cs:
	* Device/AtaCommands.cs:
	* Device/Constructor.cs:
	* Device/AtapiCommands.cs:
	* DiscImageChef.Devices.csproj:
	  Moved ATA register definition to a more common place.

2015-11-05  Natalia Portillo  <claunia@claunia.com>

	* Device/Constructor.cs:
	  Some devices (at least smsc usb-floppy) crash and reset when
	  receiving ata over the ATA PASS-THROUGH scsi command. This
	  will check for SCSI compliance first giving devices time to
	  reset.

	* Device/ScsiCommands.cs:
	  Some devices (smsc usb floppies) return the real command
	  result size disregarding allocation length and generating a
	  buffer overflow.

	* Enums.cs:
	  Added some vendor commands for Plextor and HL-DT-ST devices.

2015-11-02  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Added READ DISC STRUCTURE.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Correct command size typo
