@@ -846,7 +846,7 @@ namespace DiscImageChef.Devices
         {
             senseBuffer = new byte[32];
             byte[] cdb = new byte[10];
-            byte[] tmpBuffer = new byte[804];
+            byte[] tmpBuffer = new byte[1024];
             bool sense;
 
             cdb[0] = (byte)ScsiCommands.ReadTocPmaAtip;
