@@ -1,6 +1,12 @@
 2015-11-24  Natalia Portillo  <claunia@claunia.com>
 
 	* Commands/MediaInfo.cs:
+	  Added a workaround for Nintendo GameCube and Wii discs.
+	Added SCSI READ MEDIA SERIAL NUMBER support.
+
+2015-11-24  Natalia Portillo  <claunia@claunia.com>
+
+	* Commands/MediaInfo.cs:
 	  Reorganized media-info command so only applicable
 	  information is requested based on what we are being informed
 	  about media type.
