@@ -1,6 +1,11 @@
 2015-11-24  Natalia Portillo  <claunia@claunia.com>
 
 	* Device/ScsiCommands.cs:
+	  Use a bigger buffer for CD-TEXT.
+
+2015-11-24  Natalia Portillo  <claunia@claunia.com>
+
+	* Device/ScsiCommands.cs:
 	  On READ TOC/PMA/ATIP and READ DISC INFORMATION if trying
 	  small buffer and then real-sized buffer, some drives send
 	  garbage, so get a big enough buffer and return only the
